# flask-restless-client

./: .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test-and-build.yml
cereal_lazer/: __init__.py  parser.py
restless_client/: __init__.py  client.py  collections.py  connection.py  filter.py  inspect.py  marshal.py  method.py  models.py  property.py  types.py  utils.py
restless_client/ext/: auth.py
restless_client_server/: __init__.py
tests/: conftest.py  test_client.py  test_filter.py  test_integration.py  test_loadable_property.py  test_marshal.py  test_method.py  test_query.py
tests/cereal_lazer/: test_types.py
tests/data/: instances.yaml
tests/restless_client/: _conftest.py  conftest.py  test_client.py  test_filter.py  test_integration.py  test_loadable_property.py  test_marshal.py  test_object.py  test_query.py
tests/restless_client/data/: datamodel.json  db.json  filter.yaml
tests/restless_client_server/: test_datamodel.py
